--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fabric",
+  "name": "@aha-app/fabric",
   "description": "Object model for HTML5 canvas, and SVG-to-canvas parser. Backed by jsdom and node-canvas.",
   "homepage": "http://fabricjs.com/",
-  "version": "4.6.0",
+  "version": "4.6.0-aha-3",
   "author": "Juriy Zaytsev <kangax@gmail.com>",
   "contributors": [
     {
